syntax = "proto2";

package network;

option java_package = "project.grpc.network";
option java_outer_classname = "NetworkProto";

// gRPC service 
service NetworkService {
  rpc submitJob (JobRequest) returns (JobResult);
}

// For project.model.JobRequest
message JobRequest {
  string inputSourcePointer = 1;
  string outputDestinationPointer = 2;
  string pairDelimiter = 3;
  string keyValueDelimiter = 4;
}

// For project.model.JobResult
message JobResult {
  optional bool success = 1;
  optional string resultText = 2;
  optional string errorMessage = 3;
}
